# django-garnett

./: .flake8  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  LICENCE.txt  Procfile  Procfile.txt  README.md  pyproject.toml  requirements.txt  run.sh  tox.ini
.github/workflows/: black.yml  ci.yml  publish.yml
dev/: Dockerfile  README.md  default.env  docker-compose.yml  local-test.sh
dev/pg/: Dockerfile  install-extensions.sql
garnett/: __init__.py  apps.py  context.py  context_processors.py  drf.py  exceptions.py  expressions.py  fields copy.py  fields.py  lookups.py  middleware.py  migrate.py  mixins.py  models.py  patch.py  reversion.py  selectors.py  translatedstr.py  utils.py  views.py
garnett/ext/: filters.py  reversion.py
garnett/serializers/: base.py  json.py
garnett/templates/admin/: change_form_object_tools.html
garnett/templates/garnett/: language_selector.html
garnett/templatetags/: garnett.py
test/: manage.py
test/library_app/: admin.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
test/library_app/migrations/: 0001_initial.py
test/tests/: test_database_lookups.py  test_middleware.py
tests/: manage.py
tests/library_app/: admin.py  managers.py  models.py  settings.py  urls.py  utils.py  views.py
tests/library_app/api/: generators.py  serializers.py  urls.py  views.py
tests/library_app/migrations/: 0001_initial.py  0002_enable_trigram.py  0002_make_translatable.py  0003_book_notes.py  0003_book_other_info.py  0003_defaultbook.py  (+3 more)
tests/tests/: migration_test_utils.py  test_admin.py  test_assignment.py  test_database_lookups.py  test_db_prep.py  test_default.py  test_drf.py  test_fallback.py  test_field.py  test_html.py  test_instantiation.py  test_locales.py  test_middleware.py  test_migrate.py  test_migration.py  test_modelforms.py  test_models.py  test_pg_search.py  test_requests.py  test_reversion.py  test_update.py
(+10 files in other folders)
