[tool.poetry]
name = "django-garnett"
version = "0.0.2"
description = "Simple translatable Django fields"
authors = ["Aristotle Metadata Enterprises"]
license = "MIT"
packages = [
    {include = "garnett"}
]

[tool.poetry.dependencies]
python = "^3.8"
django = ">3.0"
langcodes = "~2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
